# product-listing-platform

./: .gitignore  .replit  ADMIN_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FIREBASE_FIRESTORE_SETUP.md  FIREBASE_STORAGE_RULES.md  FIRESTORE_RULES_SETUP.md  HOW_TO_APPROVE_PRODUCTS.md  QUICK_START.md  README.md  REMOVE_REPLIT_DEPENDENCY.md  SECURITY.md  SUBMISSION_CHECKLIST.md  TESTING_AND_DEPLOYMENT.md  USAGE_GUIDE.md  firestore.rules  make_admin.py  pyproject.toml  render.yaml  replit.md  storage.rules
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--type-service-account-project-id-boxsy-product-private-key-id-1252b00f93552c3-1761705254889_1761705254889.txt
backend/: .env.example  requirements.txt  setup_firebase.py
backend/app/: main.py
backend/app/middleware/: auth.py
backend/app/routes/: admin.py  auth.py  products.py
backend/app/schemas/: product.py  user.py
backend/app/services/: ai_service.py  firebase_service.py
backend/scripts/: set_admin_claim.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AdminReviewCard.tsx  ListingCard.tsx  ProductSkeleton.tsx  UploadForm.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts  firebase.ts
frontend/types/: index.ts
